# revolut_investment_ocr_scraper

./: main.py  pyproject.toml
